
/********************************************************************
 the working service definition.
 The WorkRequest message containing the user's name. 
 The WorkReply message containing the greetings

 http GET /v1/message  RPC Manage(startFrequency:10,packageSize: 50)
 http POST /v1/message  RPC Manage(startFrequency:10,packageSize: 50)
*********************************************************************/
syntax = "proto3";
import "google/api/annotations.proto";
package gRPC;

service RadioManage {
  rpc Tasking (WorkRequest) returns (WorkReply) {
    option (google.api.http) = {
        post: "/v1/{messageId}"
        body: "*"
        additional_bindings {
            get: "/v1/{messageId}"
          }
    };
  }
}
message WorkRequest {
    string messageId = 1;
    int64 userID = 2;
    int64 startFrequency = 3;
    int64 packageSize = 4;
}   

message WorkReply {
       string workID=1;
}
